--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -38,21 +38,34 @@ jobs:
             echo "manager=yarn" >> $GITHUB_OUTPUT
             echo "command=install" >> $GITHUB_OUTPUT
             echo "runner=yarn" >> $GITHUB_OUTPUT
+            echo "has_lockfile=true" >> $GITHUB_OUTPUT
             exit 0
           elif [ -f "${{ github.workspace }}/package.json" ]; then
             echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
             echo "runner=npx --no-install" >> $GITHUB_OUTPUT
+            if [ -f "${{ github.workspace }}/package-lock.json" ] || [ -f "${{ github.workspace }}/npm-shrinkwrap.json" ]; then
+              echo "command=ci" >> $GITHUB_OUTPUT
+              echo "has_lockfile=true" >> $GITHUB_OUTPUT
+            else
+              echo "command=install" >> $GITHUB_OUTPUT
+              echo "has_lockfile=false" >> $GITHUB_OUTPUT
+            fi
             exit 0
           else
             echo "Unable to determine package manager"
             exit 1
           fi
-      - name: Setup Node
+      - name: Setup Node (with cache)
+        if: ${{ steps.detect-package-manager.outputs.has_lockfile == 'true' }}
         uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+      - name: Setup Node (no cache)
+        if: ${{ steps.detect-package-manager.outputs.has_lockfile != 'true' }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
